@@ -1,3 +1,7 @@
+2004-12-01  Chris Taylor  <c.taylor@student.curtin.edu.au>
+
+	* main/bm.c, main/piggy.c: fix cfile bugs from recent changes
+
 2004-12-02  Bradley Bell  <btb@icculus.org>
 
 	* include/cfile.h, include/physfsx.h: fix RELEASE build, make sure
